[package]
name = "swap-tokens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_tokens"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-clmm-cpi/devnet"]

[dependencies]
anchor-lang = { version = "=0.31.0" ,  features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.0", features = ["metadata", "memo"] }
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-clmm-cpi", branch = "anchor-0.31.0" }
serde = "1.0.219"
serde_json = "1.0.140"

